--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-map-interaction": "^2.1.0",
     "react-pdf": "^7.3.3"
   },
   "devDependencies": {
