--- a/package.json
+++ b/package.json
@@ -9,25 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
-    "@prisma/client": "^5.3.1",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "mongodb": "^6.0.0",
+    "jose": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.4.19",
-    "next-auth": "^4.23.1",
+    "nookies": "^2.5.2",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-interaction": "^2.1.0",
     "react-pdf": "^7.3.3"
-  },
-  "devDependencies": {
-    "prisma": "^5.3.1"
   }
 }
