--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-map-interaction": "^2.1.0",
-    "react-pdf": "^7.3.3"
+    "react-pdf": "^7.3.3",
+    "uuid": "^10.0.0"
   }
 }
